Page MenuHome GnuPG

Kleopatra: After importing a secret key and setting ownertrust in the dialog the key is not updated
Closed, ResolvedPublic

Description

Noticed in testing:
If you import a secret key kleopatra asks you to set the owner trust to ultimate. If you select yes the key should be shown as trustworthy. In VS-NfD Mode as compliant.

Since recently this only happens after explicitly refreshing the keyring. I think this is a regression. While looking through the commits for NEWS I saw a commit regarding the auto-refresh in libkleo. Maybe there is an issue with that.

To reproduce: Have an empty Kleopatra -> Import a secret OpenPGP key -> Select Yes to mark it as ultimately trusted.

Result is that it will be shown as untrusted until the keylist is refreshed.

Details

Version
master

Event Timeline

aheinecke triaged this task as Normal priority.Dec 2 2021, 3:32 PM
aheinecke created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Dec 3 2021, 5:09 PM
ikloecker changed the task status from Open to Testing.Dec 3 2021, 7:45 PM
ikloecker removed ikloecker as the assignee of this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker added a subscriber: ikloecker.

Should be fixed. It's possible that the changes in KeyCache now cause unwanted recursion if some listener to keyListingDone() triggers a new key listing by some operation. This needs to be fixed for each listener separately.

aheinecke claimed this task.
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Apr 5 2023, 2:58 PM